hard-gists/dbb593a597acb2c0b93b/run.log
=== Docker Run Log for dbb593a597acb2c0b93b ===
Started at: Mi 29. Okt 20:32:23 CET 2025

[2025-10-29 20:32:23] START: Running container for dbb593a597acb2c0b93b
[2025-10-29 20:32:23] SUCCESS: Container e15d9478b2e8f519b45c189bc0884f41df32f4308c65360778c8d599d3ab80e0 started for dbb593a597acb2c0b93b
=== Container logs for dbb593a597acb2c0b93b ===
  File "/snippet.py", line 11
    print "Checking " + time.strftime("%a, %d %b %Y %H:%M:%S", time.gmtime())
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for dbb593a597acb2c0b93b ===
[2025-10-29 20:32:25] INFO: Container e15d9478b2e8f519b45c189bc0884f41df32f4308c65360778c8d599d3ab80e0 has stopped
